# AIbasedAutoStockAnalyzer-

./: .env  .env.example  .gitignore  PRD.md  README.md  activate_venv.bat  activate_venv.sh  analysis_framework.yaml  analyst.py  lixinger_provider.py  main_pipeline.py  news_formatter.py  pyproject.toml  requirements.txt  run_analysis.sh  run_from_package.py  screener.py  test_lixinger.py  test_news_integration.py  test_sequential_analysis.py  test_valuation_api.py  综合分析报告.md
config/: analysis_framework.yaml
data/: candidate_stocks.md  quant_screened.json  stock_pool.md  watch_list.yaml
docs/: B方案技术分析器测试报告.md  PRD.md  PROJECT_STRUCTURE.md  test_candidates.md  综合分析报告.md
scripts/: akshare_debug.py  debug_simulated_data.py  debug_technical.py  fix_cache_issue.py
stock_analyzer/: main_pipeline.py
stock_analyzer/api/: lixinger_provider.py
stock_analyzer/core/: analyst.py  screener.py  stock_pool_manager.py  technical_analyzer.py  trading_signal_generator.py
test_reports/: 000001_平安银行.md
tests/: README.md
tests/api/: __init__.py  test_stock_news.py
tests/integration/: __init__.py  test_b_plan_verification.py  test_cache_fix.py  test_fix.py  test_lixinger.py  test_lixinger_api.py  test_news_integration.py  test_pipeline.py  test_sequential_analysis.py  test_technical_integration.py  test_timezone_fix.py  test_valuation_api.py
tests/unit/: __init__.py  test_analyst.py
